{
  "version": 4,
  "terraform_version": "0.14.7",
  "serial": 14,
  "lineage": "c5e4ae9e-559c-d5a4-b0db-1e9258a67dba",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "clb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:118757976319:loadbalancer/Classic-Load-Balancer",
            "availability_zones": [
              "ap-southeast-1a"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "dns_name": "Classic-Load-Balancer-1963061515.ap-southeast-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "HTTP:8080/",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "Classic-Load-Balancer",
            "idle_timeout": 60,
            "internal": false,
            "listener": [
              {
                "instance_port": 8080,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "Classic-Load-Balancer",
            "security_groups": [
              "sg-00067bbf53850cc70"
            ],
            "source_security_group": "118757976319/publicSG",
            "source_security_group_id": "sg-00067bbf53850cc70",
            "subnets": [
              "subnet-0f4b927a67399a260"
            ],
            "tags": {
              "Environment": "development"
            },
            "zone_id": "Z1LMS91P8CMLE5"
          },
          "dependencies": [
            "aws_security_group.publicSG",
            "aws_subnet.web",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:118757976319:internet-gateway/igw-0142c8098841ace35",
            "id": "igw-0142c8098841ace35",
            "owner_id": "118757976319",
            "tags": {
              "Name": "main"
            },
            "vpc_id": "vpc-09309103ad557c811"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-08d0ee580bbee9226",
            "owner_id": "118757976319",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0142c8098841ace35",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public route table"
            },
            "vpc_id": "vpc-09309103ad557c811"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "db1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d053e4d116766486",
            "route_table_id": "rtb-08d0ee580bbee9226",
            "subnet_id": "subnet-0b69aeb21ecc768f3"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public",
            "aws_subnet.db1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "db2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-002d8b35f4cb16cd5",
            "route_table_id": "rtb-08d0ee580bbee9226",
            "subnet_id": "subnet-0de8f20e1e26741d3"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public",
            "aws_subnet.db2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06dee1b0dd6e2ef81",
            "route_table_id": "rtb-08d0ee580bbee9226",
            "subnet_id": "subnet-0f4b927a67399a260"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public",
            "aws_subnet.web",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "DBSG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:118757976319:security-group/sg-036aa88ec1767cc28",
            "description": "Allow RDS inbound Traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-036aa88ec1767cc28",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "RDS port from Web Tier",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a05caca7fa6e3c2e"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "DBSG",
            "name_prefix": "",
            "owner_id": "118757976319",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "DBSG"
            },
            "timeouts": null,
            "vpc_id": "vpc-09309103ad557c811"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.publicSG",
            "aws_security_group.webSG",
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "publicSG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:118757976319:security-group/sg-00067bbf53850cc70",
            "description": "Allow port 80 public traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00067bbf53850cc70",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http port from public",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "publicSG",
            "name_prefix": "",
            "owner_id": "118757976319",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "publicSG"
            },
            "timeouts": null,
            "vpc_id": "vpc-09309103ad557c811"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "webSG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:118757976319:security-group/sg-0a05caca7fa6e3c2e",
            "description": "Allow http inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a05caca7fa6e3c2e",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Http from Load Balancer",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00067bbf53850cc70"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "webSG",
            "name_prefix": "",
            "owner_id": "118757976319",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "WebSG"
            },
            "timeouts": null,
            "vpc_id": "vpc-09309103ad557c811"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.publicSG",
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:118757976319:subnet/subnet-0b69aeb21ecc768f3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0b69aeb21ecc768f3",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "118757976319",
            "tags": {
              "Name": "DB Subnet"
            },
            "vpc_id": "vpc-09309103ad557c811"
          },
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:118757976319:subnet/subnet-0de8f20e1e26741d3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0de8f20e1e26741d3",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "118757976319",
            "tags": {
              "Name": "DB Subnet"
            },
            "vpc_id": "vpc-09309103ad557c811"
          },
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:118757976319:subnet/subnet-0f4b927a67399a260",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-0f4b927a67399a260",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "118757976319",
            "tags": {
              "Name": "Web Subnet"
            },
            "vpc_id": "vpc-09309103ad557c811"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:118757976319:vpc/vpc-09309103ad557c811",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a0d71360c247a04e",
            "default_route_table_id": "rtb-0a2686ed9fd8c30a9",
            "default_security_group_id": "sg-0e980db5f334710a5",
            "dhcp_options_id": "dopt-e130c687",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-09309103ad557c811",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0a2686ed9fd8c30a9",
            "owner_id": "118757976319"
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}